--- a/style.css
+++ b/style.css
@@ -53,7 +53,30 @@ display: inline-block;
 .closeMobileNav{
   display: none!important;
 }
-
+.add-to-cart-btn {
+  background-color: grey;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  font-size: 1.2rem;
+}
+.add-to-cart-btn:hover{
+  color: #fff;
+  background-color: rgb(160, 160, 160);
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+.add-to-cart-button{
+  color: black;
+  background-color: grey;
+  margin-bottom:3rem;
+}
   /* end of header */
   .description{
     background: url("img/background.jpg");
